<resources>
    <string name="main_menu_price">Прайс</string>
    <string name="main_menu_town_list_dialog_title">Список городов</string>
    <string name="activity_title_delivery_map">Карта доставки</string>
    <string name="activity_title_relocation">Перемещения</string>
    <string name="settings_title">Настройки</string>
    <string name="settings_password_hint">Ключ доступа</string>
    <string name="settings_driver_name_hint">Позывной</string>
    <string name="settings_reserve_address_hint">Резервный сервер</string>
    <string name="settings_phone_hint">Номер телефона</string>
    <string name="settings_cancel">Отмена</string>
    <string name="settings_save">Сохранить</string>
    <string name="action_settings">Настройки</string>
    <string name="online_status">На смене</string>
    <string name="offline_status">Не на смене</string>
    <string name="out_status">Недоступен</string>
    <string name="cary_status">Назначен</string>
    <string name="action_go_online">На смену</string>
    <string name="already_online_error">Вы уже на смене!</string>
    <string name="empty_settings_error">Заполните позывной!</string>
    <string name="go_online_progress_message">Выходим на смену…</string>
    <string name="go_offline_text">Завершить смену</string>
    <string name="go_offline_progress_message">Заканчиваем смену…</string>
    <string name="connection_lost_error">Соединение с сервером потеряно!</string>
    <string name="session_expired_error">Ваша смена завершена автоматически. Выйдите на смену!</string>
    <string name="assign_button_text">Взять</string>
    <string name="assign_button_back">Закрыть</string>
    <string name="assign_delivery_progress_message">Берём доставку…</string>
    <string name="assign_delivery_error">Не удалось взять доставку. Попробуйте ещё раз!</string>
    <string name="assign_delivery_success">Доставка взята</string>
    <string name="reject_set_delivery_text">Отказаться от комплекта</string>
    <string name="reject_delivery_text">Отказаться</string>
    <string name="unassign_delivery_progress_message">Отказываемся от доставки…</string>
    <string name="unassign_delivery_error">Не удалось отказаться от доставки. Попробуйте ещё раз!</string>
    <string name="unassign_delivery_success">Доставка снята</string>
    <string name="menu_item_relocation_complete">Завершить</string>
    <string name="finish_delivery_progress_message">Завершаем доставку…</string>
    <string name="update_delivery_progress_message">Обновляем…</string>
    <string name="finish_delivery_error">Не удалось завершить доставку. Попробуйте ещё раз!</string>
    <string name="finish_delivery_success">Доставка завершена</string>
    <string name="title_activity_delivery_dialog">Взять доставку</string>
    <string name="assigned_delivery_message">Вам назначена доставка</string>
    <string name="unassign_delivery_message">Вас сняли с доставки!</string>
    <string name="reject_set_delivery_confirm">Отказаться от комплекта?</string>
    <string name="reject_delivery_confirm">Отказаться от доставки?</string>
    <string name="reject_delivery_set_confirm">Доставка в комплекте. Отказаться от всего комплекта?</string>
    <string name="finish_delivery_confirm">Завершить доставку?</string>
    <string name="go_offline_confirm">Закончить смену?</string>
    <string name="yes_no_confirm">Вы уверены?</string>
    <string name="open_confirm">Открыть файл</string>
    <string name="open_local">С диска</string>
    <string name="open_download">Скачать заново</string>
    <string name="download_or_open">Если нажмете нет, то файл будет скачан заново.</string>
    <string name="relocation_assigned_message">Вам назначено перемещение</string>
    <string name="relocation_unassigned_message">Вас сняли с перемещения</string>
    <string name="relocation_complete_error">Не удалось завершить перемещение</string>
    <string name="relocation_complete_success">Доставка завершена</string>
    <string name="dialog_complete_relocation_title">Завершение перемещения</string>
    <string name="dialog_complete_relocation_message">Вы уверены, что хотите завершить перемещение?</string>
    <string name="dialog_complete_relocation_positive">Завершить</string>
    <string name="dialog_complete_relocation_negative">Закрыть</string>
    <string name="dialog_send_print_title">Отправка на печать</string>
    <string name="dialog_send_print_message">Вы уверены, что хотите отправить на печать?</string>
    <string name="dialog_send_print_positive">Отправить</string>
    <string name="dialog_send_print_negative">Закрыть</string>
    <string name="notification_title">Стриж</string>
    <string name="new_delivery_message">Новая доставка</string>
    <string name="session_expired_message">Смена завершена!</string>
    <string name="town_list_load">Загружается список городов…</string>
    <string name="town_list_load_failed">Не удалось загрузить список городов</string>
    <string name="plant_list_load">Загружается список "Откуда"</string>
    <string name="plant_list_load_failed">Не удалось загрузить список "Откуда"</string>
    <string name="title_activity_werks">Получать доставки с…</string>
    <string name="filter_werks_text">Получать доставки с…</string>
    <string name="app_service_stopped">Сервис приложения остановлен</string>
    <string name="bind_service_error">Не удалось запустить сервис</string>
    <string name="service_started">Сервис СТРИЖ запущен</string>
    <string name="go_offline_inspiteof">Завершить без подтверждения на сервере?</string>
    <string name="phone_text">Номер телефона</string>
    <string name="call_client_text">Звонок клиенту</string>
    <string name="no_phone_error">Укажите номер телефона в настройках</string>
    <string name="call_requested_message">Звонок заказан. Ожидайте…</string>
    <string name="action_save_settings">Сохранить</string>
    <string name="action_cancel_settings">Отменить</string>
    <string name="incident_text">Фото инцидента</string>
    <string name="title_activity_reasons">Причина отказа</string>
    <string name="menu_item_relocation_print">Печать</string>
    <string name="print_delivery_confirm">Отправить на печать?</string>
    <string name="print_delivery_progress">Печатаем…</string>
    <string name="print_end_success">Распечатано!</string>
    <string name="title_cup_list">Фотосессии ЦУП</string>
    <string name="title_driver_list">Личное дело</string>
    <string name="tplst_empty_error">Выберите город</string>
    <string name="tplst_default_name">Выберите город</string>
    <string name="version">6.0.2 (47)</string>
    <string name="start_waisting_progress_message">Начинаем простой…</string>
    <string name="start_waisting_error">Не удалось начать простой</string>
    <string name="end_waisting_progress_message">Заканчиваем простой…</string>
    <string name="end_waisting_error">Не удалось завершить простой</string>
    <string name="start_waisting_confirm">Начать простой?</string>
    <string name="end_waisting_confirm">Завершить простой?</string>
    <string name="no_location_message">Не удалось определить Ваше положение или данные устарели</string>
    <string name="gps_disabled_message">Включите GPS!</string>
    <string name="waist_start_text">Начать простой</string>
    <string name="waist_end_text">Закончить простой</string>
    <string name="waist_start_succ">Простой начат!</string>
    <string name="waist_end_succ">Простой завершен</string>
    <string name="dlv_update_text">Обновить</string>
    <string name="title_activity_phone_select">Выберите номер</string>
    <string name="send_message_text">Отправить сообщение</string>
    <string name="title_activity_driver_message">Выберите сообщение</string>
    <string name="dialog_send_comment_title">Комментарий</string>
    <string name="dialog_send_comment_apply">Отправить</string>
    <string name="dialog_send_comment_hint">Введите комментарий</string>
    <string name="send_data_progress">Идёт отправка…</string>
    <string name="send_photo_progress">Идёт отправка фото…</string>
    <string name="send_photo_successful">Фото отправлено успешно</string>
    <string name="send_photo_unsuccessful">"Не удалось отправить фото"</string>
    <string name="get_data_progress">Получаем данные…</string>
    <string name="title_activity_quest">Ответьте на вопрос</string>
    <string name="answer_btn_text">Ответить</string>
    <string name="answer_btn_next_text">Дальше</string>
    <string name="answer_btn_prev_text">Назад</string>
    <string name="answer_confirm_text">Отправить ответ?</string>
    <string name="title_activity_pcab">Личный кабинет</string>
    <string name="navigation_drawer_open">Открыть панель навигации</string>
    <string name="navigation_drawer_close">Закрыть панель навигации</string>
    <string name="action_personal_cabinet">Личный кабинет</string>
    <string name="action_relocations">Мои перемещения</string>
    <string name="find_deliveries">Ищем…</string>
    <string name="refresh_title">Обновить</string>
    <string name="find_tknum_caption">Номер доставки</string>
    <string name="find_date_caption">Дата доставки</string>
    <string name="find_btn_caption">Найти</string>
    <string name="go_cabinet_online_progress_message">Входим…</string>
    <string name="go_cabinet_offline_progress">Выходим…</string>
    <string name="scan_text">Прикрепить фото ТТН</string>
    <string name="scan_succeed">Отправлено успешно</string>
    <string name="scan_failed">Не удалось отправить</string>
    <string name="title_activity_picker">Отправка фото ТТН</string>
    <string name="action_load">Загружаем…</string>
    <string name="action_waiting">Ждите…</string>
    <string name="mark_as_read">Прочитано</string>
    <string name="go_offline_for_chat">Завершить смену для перехода в личный кабинет?</string>
    <string name="new_chat_message">Новое сообщение</string>
    <string name="action_filter_title">Фильтр</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_terminal_test">Тест соединения</string>
    <string name="action_terminal">Меню терминала</string>
    <string name="action_terminal_pay">Оплата</string>
    <string name="retry_payment_title">Произошла ошибка</string>
    <string name="retry">Повторить</string>
    <string name="no_payreg">Без регистрации</string>
    <string name="title_activity_cup_request">ЦУП</string>
    <string name="title_activity_documents_list">Список документов</string>
    <string name="action_document">Документы</string>
    <string name="chat_settings_caption">Настройки чата</string>
    <string name="chat_notifications">Уведомления</string>
    <string name="pcab_action_delivery_list_text">Доставки за сегодня</string>
    <string name="pcab_action_find_delivery_text">Поиск доставки</string>
    <string name="pcab_action_swift_room_list_text">Сообщения</string>
    <string name="pcab_action_cup_set_list_text">Фотосессии ЦУП</string>
    <string name="pcab_action_driver_records_text">Личное дело</string>
    <string name="pcab_action_settings_text">Настройки</string>
    <string name="pcab_action_photo_base_text">Личные данные</string>
    <string name="pcab_action_cup_photo">ЦУП Фото</string>
    <string name="pcab_action_exit_text">Выход</string>
    <string name="pcab_action_indicator_text">Показатели</string>
    <string name="default_actionbar_title">Стриж</string>
    <string name="cup_btn_send_text">Отправить</string>
    <string name="action_open_gate">Открытие ворот</string>
    <string name="photo_document_type">Тип документа:</string>
    <string name="photo_document_date">Дата съемки:</string>
    <string name="photo_document_actual">Актуально до:</string>
    <string name="cup_screen_photo_btn_take">Сделать фото</string>
    <string name="cup_screen_photo_btn_send">Отправить</string>
    <string name="cup_screen_photo_btn_delay">Отложить</string>
    <string name="action_price">@string/main_menu_price</string>
</resources>