<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:text="@string/settings_title"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_driver_name_hint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/driver_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textPersonName"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/settings_password_hint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/settings_phone_hint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/phone_et"
                android:maxLines="1"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/settings_reserve_address_hint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/reserve_ip_et"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:paddingBottom="2dp"
        android:paddingRight="2dp"
        android:paddingLeft="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/settings_save"
            style="@style/DialogButton.Positive"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/settings_save"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/settings_cancel"
            style="@style/DialogButton.Neutral"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/settings_cancel"/>

    </LinearLayout>
</LinearLayout>