<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.rosa.swift.core.ui.activities.QuestActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/myviewpager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.rd.PageIndicatorView
        android:id="@+id/pageIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        app:piv_animationType="color"
        app:piv_unselectedColor="@color/black"
        app:piv_selectedColor="@color/android_blue_btn"
        app:piv_interactiveAnimation="true"
        app:piv_viewPager="@id/myviewpager"/>



    <LinearLayout
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/questTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </ScrollView>

        <TextView
            android:id="@+id/lgortTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/answersListView"
            style="@style/ListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:layout_weight="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/answerPrev"
                style="@style/LoginForm.Button.Exit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/answer_btn_prev_text" />

            <Button
                android:id="@+id/answerNext"
                style="@style/LoginForm.Button.Cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/answer_btn_next_text" />
        </LinearLayout>

        <Button
            android:id="@+id/answerBtn"
            style="@style/LoginForm.Button.Ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/answer_btn_text" />
    </LinearLayout>

</RelativeLayout>
